--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,6 +1,15 @@
 body {
   margin: 0;
   padding: 0;
+  background: #fafafa;
+}
+
+h4 {
+  font-weight: bold !important;
+}
+
+pre {
+  margin: 0;
 }
 
 .bold {
