--- a/src/app/components/item-list/item/item.component.html
+++ b/src/app/components/item-list/item/item.component.html
@@ -7,21 +7,40 @@
           <span class="bold" [class.italic]="!item.required">{{ item.key }}</span>
           <mat-icon *ngIf="item.required" class="small-icon text-blue" matTooltip="Required" style="margin-left:5px">info</mat-icon>
           <div class="chip" [ngClass]="'bg-'+color"  style="margin-left:5px">{{ item.type }}</div>
+          <div class="chip bg-purple" *ngIf="item.pattern" style="margin-left:5px" [matTooltip]="item.pattern">Pattern</div>
           <div class="item-condition" *ngFor="let condition of conditions">
             <span class="item-condition-key">{{ condition.key }}</span>
-            <span>{{ condition.value}}</span>
+            <span>{{ condition.value }}</span>
           </div>
         </div>
         <div>{{ item.description }}</div>
       </div>
-      <div style="flex flex-col">
-        <div class="flex" *ngFor="let example of item.examples">
-          <span *ngIf="item.examples.length > 1">Example: {{ example.name }}</span>
-          <div class="flex">
-            <pre><code [highlight]="example.value"></code></pre>
-            <app-copy-to-clipboard [content]="example.value"></app-copy-to-clipboard>
+      <div style="flex flex-col" *ngIf="item.examples">
+        <ng-container *ngIf="item.examples.length === 1">
+          <div class="flex flex-col">
+            <div class="flex align-center">
+              <pre><code [highlight]="item.examples[0].value"></code></pre>
+              <app-copy-to-clipboard [content]="item.examples[0].value"></app-copy-to-clipboard>
+            </div>
+            <div *ngIf="item.examples[0].description">{{ item.examples[0].description }}</div>
           </div>
-        </div>
+        </ng-container>
+        <ng-container  *ngIf="item.examples.length > 1">
+          <div class="flex flex-col">
+            <div class="flex align-center">
+              <div>
+                <mat-select [value]="item.examples[0]" #exampleSelect style="min-width:100px">
+                  <mat-option *ngFor="let example of item.examples" [value]="example">{{ example.name }}</mat-option>
+                </mat-select>
+              </div>
+              <div class="flex align-center">
+                <pre><code [highlight]="exampleSelect.value.value"></code></pre>
+                <app-copy-to-clipboard [content]="exampleSelect.value.value"></app-copy-to-clipboard>
+              </div>
+            </div>
+            <div *ngIf="exampleSelect.value.description">{{ exampleSelect.value.description }}</div>
+          </div>
+        </ng-container> 
       </div>
     </div>
     <div *ngIf="item.properties" class="item-properties">
