--- a/src/app/components/routes/routes.component.html
+++ b/src/app/components/routes/routes.component.html
@@ -10,9 +10,64 @@
   </div>
 </div>
 
-<div class="flex flex-col resource-list">
-  <ng-container *ngFor="let resource of filteredResources">
 
+<mat-card *ngFor="let group of groupedResources" style="margin-bottom:20px">
+  <mat-card-content>
+    <div class="flex flex-col resource-list">
+      <ng-container *ngFor="let resource of group.resources">
+        <ng-container *ngIf="view === 'compact'">
+          <div class="flex flex-1 align-center resource-list-item">
+            <div class="flex flex-1 align-center">
+              <span *ngIf="resource.parentUrl" style="margin-right:5px;color:#999">{{ resource.parentUrl }}</span>
+              <span>{{ resource.relativeUri }}</span>
+            </div>
+            <div *ngFor="let method of resource.methods">
+              <button 
+                mat-flat-button 
+                class="button-method" 
+                [ngClass]="'button-'+method.method" 
+                style="margin:3px" 
+                (click)="openDialog(resource.uniqueId, method.method)"
+              ><mat-icon *ngIf="method.securedBy">lock</mat-icon>{{ method.method }}</button>
+            </div>
+          </div>
+        </ng-container>
+
+        <ng-container *ngIf="view === 'detail'">
+          <ng-container *ngFor="let method of resource.methods">
+            <div class="flex flex-1 align-center resource-list-item">
+              <div class="flex flex-col flex-1 ">
+                <div class="flex align-center">
+                  <span *ngIf="resource.parentUrl" style="margin-right:5px;color:#999">{{ resource.parentUrl }}</span>
+                  <span>{{ resource.relativeUri }}</span>
+                </div>
+                <span>{{ method.description }} </span>
+              </div>
+              <div>
+                <button 
+                  mat-flat-button 
+                  class="button-method" 
+                  [ngClass]="'button-'+method.method" 
+                  style="margin:3px" 
+                  (click)="openDialog(resource.uniqueId, method.method)"
+                ><mat-icon *ngIf="method.securedBy">lock</mat-icon>{{ method.method }}</button>
+              </div>
+            </div>
+          </ng-container>
+        </ng-container>
+      </ng-container>
+    </div>
+  </mat-card-content>
+</mat-card>
+
+<!--
+<div class="flex flex-col resource-list">
+
+  <ng-container *ngFor="let resource of filteredResources;let i = index">
+      <mat-card>
+        <mat-card-title>Title</mat-card-title>
+        <mat-card-content>
+      
       <ng-container *ngIf="view === 'compact'">
         <div class="flex flex-1 align-center resource-list-item">
           <div class="flex flex-1 align-center">
@@ -54,5 +109,11 @@
         </ng-container>
       </ng-container>
 
+      <div *ngIf="isResourceGroupEnd(i)" style="height:50px"></div>
+
+      </mat-card-content>
+      </mat-card>
+
   </ng-container>
 </div>
+-->
